# quartusCodespaces

./: README.md  postCreateCommand.sh
.devcontainer/: devcontainer.json
prj/: qar_info.json  readme.txt  top.qarlog  top.qp_info
prj/hw/: assignment_defaults.qdf  qsys_top.qsys  top.qpf  top.qsf  top.qws  top.restore.rpt  top.sdc
prj/hw/dni/: manifest.txt
prj/hw/ip/qsys_top/: qsys_top_clock_in.ip  qsys_top_intel_niosv_m_0.ip  qsys_top_intel_onchip_memory_0.ip  qsys_top_iopll_0.ip  qsys_top_jtag_uart_0.ip  qsys_top_pio_0.ip  qsys_top_s10_user_rst_clkgate_0.ip  qsys_top_sysid_qsys_0.ip
prj/hw/ip/qsys_top/qsys_top_clock_in/: qsys_top_clock_in.bsf  qsys_top_clock_in.cmp  qsys_top_clock_in.csv  qsys_top_clock_in.html  qsys_top_clock_in.qgsynthc  qsys_top_clock_in.qip  qsys_top_clock_in.sopcinfo  qsys_top_clock_in.spd  qsys_top_clock_in.xml  qsys_top_clock_in_bb.v  qsys_top_clock_in_generation.rpt  qsys_top_clock_in_generation_previous.rpt  qsys_top_clock_in_inst.v  qsys_top_clock_in_inst.vhd
prj/hw/ip/qsys_top/qsys_top_intel_niosv_m_0/: qsys_top_intel_niosv_m_0.bsf  qsys_top_intel_niosv_m_0.cmp  qsys_top_intel_niosv_m_0.csv  qsys_top_intel_niosv_m_0.html  qsys_top_intel_niosv_m_0.qgsimc  qsys_top_intel_niosv_m_0.qip  qsys_top_intel_niosv_m_0.sopcinfo  qsys_top_intel_niosv_m_0.spd  qsys_top_intel_niosv_m_0.xml  qsys_top_intel_niosv_m_0_bb.v  qsys_top_intel_niosv_m_0_generation.rpt  qsys_top_intel_niosv_m_0_generation_previous.rpt  qsys_top_intel_niosv_m_0_inst.v  qsys_top_intel_niosv_m_0_inst.vhd
prj/hw/ip/qsys_top/qsys_top_intel_onchip_memory_0/: qsys_top_intel_onchip_memory_0.bsf  qsys_top_intel_onchip_memory_0.cmp  qsys_top_intel_onchip_memory_0.csv  qsys_top_intel_onchip_memory_0.html  qsys_top_intel_onchip_memory_0.qgsynthc  qsys_top_intel_onchip_memory_0.qip  qsys_top_intel_onchip_memory_0.sopcinfo  qsys_top_intel_onchip_memory_0.spd  qsys_top_intel_onchip_memory_0.xml  qsys_top_intel_onchip_memory_0_bb.v  qsys_top_intel_onchip_memory_0_generation.rpt  qsys_top_intel_onchip_memory_0_generation_previous.rpt  qsys_top_intel_onchip_memory_0_inst.v  qsys_top_intel_onchip_memory_0_inst.vhd
prj/hw/ip/qsys_top/qsys_top_iopll_0/: qsys_top_iopll_0.bsf  qsys_top_iopll_0.cmp  qsys_top_iopll_0.csv  qsys_top_iopll_0.html  qsys_top_iopll_0.qgsynthc  qsys_top_iopll_0.qip  qsys_top_iopll_0.sopcinfo  qsys_top_iopll_0.spd  qsys_top_iopll_0.xml  qsys_top_iopll_0_bb.v  qsys_top_iopll_0_generation.rpt  qsys_top_iopll_0_generation_previous.rpt  qsys_top_iopll_0_inst.v  qsys_top_iopll_0_inst.vhd
prj/hw/ip/qsys_top/qsys_top_jtag_uart_0/: qsys_top_jtag_uart_0.bsf  qsys_top_jtag_uart_0.cmp  qsys_top_jtag_uart_0.csv  qsys_top_jtag_uart_0.html  qsys_top_jtag_uart_0.qgsynthc  qsys_top_jtag_uart_0.qip  qsys_top_jtag_uart_0.regmap  qsys_top_jtag_uart_0.sopcinfo  qsys_top_jtag_uart_0.spd  qsys_top_jtag_uart_0.xml  qsys_top_jtag_uart_0_bb.v  qsys_top_jtag_uart_0_generation.rpt  qsys_top_jtag_uart_0_generation_previous.rpt  qsys_top_jtag_uart_0_inst.v  qsys_top_jtag_uart_0_inst.vhd
prj/hw/ip/qsys_top/qsys_top_pio_0/: qsys_top_pio_0.bsf  qsys_top_pio_0.cmp  qsys_top_pio_0.csv  qsys_top_pio_0.html  qsys_top_pio_0.qgsimc  qsys_top_pio_0.qip  qsys_top_pio_0.regmap  qsys_top_pio_0.sopcinfo  qsys_top_pio_0.spd  qsys_top_pio_0.xml  qsys_top_pio_0_bb.v  qsys_top_pio_0_generation.rpt  qsys_top_pio_0_generation_previous.rpt  qsys_top_pio_0_inst.v  qsys_top_pio_0_inst.vhd
prj/hw/ip/qsys_top/qsys_top_s10_user_rst_clkgate_0/: qsys_top_s10_user_rst_clkgate_0.bsf  qsys_top_s10_user_rst_clkgate_0.cmp  qsys_top_s10_user_rst_clkgate_0.csv  qsys_top_s10_user_rst_clkgate_0.html  qsys_top_s10_user_rst_clkgate_0.qgsynthc  qsys_top_s10_user_rst_clkgate_0.qip  qsys_top_s10_user_rst_clkgate_0.sopcinfo  qsys_top_s10_user_rst_clkgate_0.spd  qsys_top_s10_user_rst_clkgate_0.xml  qsys_top_s10_user_rst_clkgate_0_bb.v  qsys_top_s10_user_rst_clkgate_0_generation.rpt  (+3 more)
prj/hw/output_files/: sim.out  top.asm.rpt  top.drc.partitioned.rpt  top.drc.synthesized.rpt  top.fit.finalize.rpt  top.fit.place.rpt  top.fit.plan.rpt  top.fit.retime.rpt  top.fit.route.rpt  top.fit.rpt  top.fit.summary  top.flow.rpt  top.pin  top.sdc_constraints.rpt  top.sld  top.sof  top.sta.rpt  top.sta.summary  top.syn.rpt  top.syn.summary  top.tq.drc.signoff.rpt  transcript
prj/hw/qsys_top/: qsys_top.bsf  qsys_top.csv  qsys_top.html  qsys_top.qgsimc  qsys_top.regmap  qsys_top.sopcinfo  qsys_top.spd  qsys_top_generation.rpt  qsys_top_generation_previous.rpt
prj/hw/qsys_top/sim/: qsys_top.v
prj/ready_to_test/: niosv_app.elf
prj/scripts/: build_sof.py  niosv_app_creation.sh  qsys_top.tcl  quartus_project.tcl
prj/sw/niosv_app/: CMakeLists.txt  main.c
prj/sw/niosv_bsp/: CMakeLists.txt  alt_sys_init.c  linker.h  linker.x  memory.gdb  settings.bsp  summary.html  system.h  toolchain.cmake
prj/sw/niosv_bsp/HAL/inc/: intel_fpga_api.h  intel_fpga_platform.h  intel_fpga_platform_api.h  intel_niosv.h  intel_niosv_irq.h  intel_niosv_m.h  intel_niosv_m_irq.h  io.h
prj/sw/niosv_bsp/HAL/inc/os/: alt_syscall.h
prj/sw/niosv_bsp/HAL/inc/priv/: intel_niosv_gmon_data.h
prj/sw/niosv_bsp/HAL/inc/sys/: alt_debug.h  alt_errno.h  alt_exceptions.h  alt_irq.h  alt_log_printf.h  alt_sim.h  alt_stack.h  alt_timestamp.h  alt_tls.h  intel_fpga_api_cmn_dfl.h  intel_fpga_api_niosv.h  intel_fpga_platform_api_niosv.h  intel_fpga_platform_niosv.h  msw_interrupt.h
prj/sw/niosv_bsp/HAL/src/: alt_busy_sleep.c  alt_dcache_flush.c  alt_dcache_flush_all.c  alt_dcache_flush_no_writeback.c  alt_do_ctors.c  alt_do_dtors.c  alt_errno.c  alt_gmon.c  alt_icache_flush.c  alt_icache_flush_all.c  alt_iic.c  alt_iic_isr_register.c  alt_instruction_exception_register.c  alt_io_redirect.c  alt_irq_handler.c  alt_isatty.c  alt_log_macro.S  alt_log_printf.c  alt_mcount.S  alt_remap_cached.c  alt_remap_uncached.c  alt_sbrk.c  alt_tls.c  alt_uncached_free.c  alt_uncached_malloc.c  crt0.S  intel_fpga_api_cmn_dfl.c  intel_fpga_api_cmn_inf.c  intel_fpga_api_cmn_msg.c  intel_fpga_api_niosv.c  intel_fpga_platform_api_niosv.c  intel_niosv_irq.c  machine_trap.S  mtimer.c
(+377 files in other folders)
